fixed dialog links, triple scroll bars, and select arrow overlap

--- a/src/css/defaults/interaction.scss
+++ b/src/css/defaults/interaction.scss
@@ -415,10 +415,12 @@ input[type="week"]:focus {
 select {
   @include btn($color: $white, $size: .75em, $corners: .25em);
   position: relative;
+  padding: 1em;
+  padding-right: 2.5em;
   color: $grey-darker;
   text-align: left;
-  background: $white url('../img/down-arrow.svg') no-repeat 96% center;
-  background-size: auto 80%;
+  background: $white url('../img/down-arrow.svg') no-repeat 97% 48%;
+  background-size: auto 50%;
   border: 1px solid $grey-mid;
   &[multiple] {
     font-size: .75em;
@@ -431,6 +433,10 @@ select {
       color: inherit;
     }
   }
+}
+
+select, option {
+  text-overflow: ellipsis;
 }
 
 
